adjusted mappers and tests